--- a/andtcr/clustering/get_data_from_db_me2_and.ipynb
+++ b/andtcr/clustering/get_data_from_db_me2_and.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:16c22f7436548fa9d9c80ef21b33660e1084a0a07920cf1077fb3352b82b9348"
+  "signature": "sha256:7c232cc5915094f5d5c07fe33215b3831b4e1e43dabb87928d7c877ace1301fc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -18,7 +18,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 20
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -46,7 +46,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -59,7 +59,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -71,7 +71,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -89,7 +89,21 @@
       "p4.tag_count as tag_count_{other_3},\n",
       "p4.id as id_{other_3},\n",
       "p5.tag_count as tag_count_{other_4},\n",
-      "p5.id as id_{other_4}\n",
+      "p5.id as id_{other_4},\n",
+      "\n",
+      "ets.tag_count as ets_tag_count,\n",
+      "ets.id as ets_id,\n",
+      "batf.tag_count as batf_tag_count,\n",
+      "batf.id as batf_id,\n",
+      "junb.tag_count as junb_tag_count,\n",
+      "junb.id as junb_id,\n",
+      "cjun.tag_count as cjun_tag_count,\n",
+      "cjun.id as cjun_id,\n",
+      "jund.tag_count as jund_tag_count,\n",
+      "jund.id as jund_id,\n",
+      "irf4.tag_count as irf4_tag_count,\n",
+      "irf4.id as irf4_id\n",
+      "\n",
       "from chipseq.peak_cd4tcell_{ab}_{peptide}_24h_chip1 p1\n",
       "join genome_reference_mm10.chromosome chr \n",
       "on p1.chromosome_id = chr.id\n",
@@ -107,6 +121,25 @@
       "on p1.chromosome_id = p5.chromosome_id\n",
       "and p1.start_end && p5.start_end\n",
       "\n",
+      "left outer join chipseq.peak_cd4tcell_ets1 ets\n",
+      "on p1.chromosome_id = ets.chromosome_id\n",
+      "and p1.start_end && ets.start_end\n",
+      "left outer join chipseq.peak_cd4tcell_th17_batf batf\n",
+      "on p1.chromosome_id = batf.chromosome_id\n",
+      "and p1.start_end && batf.start_end\n",
+      "left outer join chipseq.peak_cd4tcell_th17_junb junb\n",
+      "on p1.chromosome_id = junb.chromosome_id\n",
+      "and p1.start_end && junb.start_end\n",
+      "left outer join chipseq.peak_cd4tcell_th17_cjun cjun\n",
+      "on p1.chromosome_id = cjun.chromosome_id\n",
+      "and p1.start_end && cjun.start_end\n",
+      "left outer join chipseq.peak_cd4tcell_th17_jund jund\n",
+      "on p1.chromosome_id = jund.chromosome_id\n",
+      "and p1.start_end && jund.start_end\n",
+      "left outer join chipseq.peak_cd4tcell_th17_irf4 irf4\n",
+      "on p1.chromosome_id = irf4.chromosome_id\n",
+      "and p1.start_end && irf4.start_end\n",
+      "\n",
       "left outer join genome_reference_mm10.sequence_transcription_region reg\n",
       "on p1.chromosome_id = reg.chromosome_id\n",
       "and p1.start_end && reg.start_site_1000\n",
@@ -117,7 +150,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 51
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -141,7 +174,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 52
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -169,11 +202,17 @@
         "      <th>tag_count_no_peptide</th>\n",
         "      <th>id_no_peptide</th>\n",
         "      <th>tag_count_10um_k99a</th>\n",
-        "      <th>id_10um_k99a</th>\n",
-        "      <th>tag_count_100um_k99a</th>\n",
-        "      <th>id_100um_k99a</th>\n",
-        "      <th>tag_count_0_1um_pcc</th>\n",
-        "      <th>id_0_1um_pcc</th>\n",
+        "      <th>...</th>\n",
+        "      <th>batf_tag_count</th>\n",
+        "      <th>batf_id</th>\n",
+        "      <th>junb_tag_count</th>\n",
+        "      <th>junb_id</th>\n",
+        "      <th>cjun_tag_count</th>\n",
+        "      <th>cjun_id</th>\n",
+        "      <th>jund_tag_count</th>\n",
+        "      <th>jund_id</th>\n",
+        "      <th>irf4_tag_count</th>\n",
+        "      <th>irf4_id</th>\n",
         "    </tr>\n",
         "  </thead>\n",
         "  <tbody>\n",
@@ -189,11 +228,17 @@
         "      <td>  475.6</td>\n",
         "      <td>  207</td>\n",
         "      <td> 1217.1</td>\n",
-        "      <td>   6</td>\n",
-        "      <td> 830.2</td>\n",
-        "      <td>   8</td>\n",
-        "      <td> 1213.3</td>\n",
-        "      <td>  5</td>\n",
+        "      <td>...</td>\n",
+        "      <td> 53.70</td>\n",
+        "      <td>  5125</td>\n",
+        "      <td> 19.2</td>\n",
+        "      <td> 17391</td>\n",
+        "      <td>  NaN</td>\n",
+        "      <td>   NaN</td>\n",
+        "      <td>  35.0</td>\n",
+        "      <td> 20005</td>\n",
+        "      <td> 24.2</td>\n",
+        "      <td> 19367</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>1</th>\n",
@@ -207,11 +252,17 @@
         "      <td>  226.9</td>\n",
         "      <td> 1163</td>\n",
         "      <td>  824.8</td>\n",
-        "      <td>  33</td>\n",
-        "      <td> 342.7</td>\n",
-        "      <td> 157</td>\n",
-        "      <td> 1043.5</td>\n",
-        "      <td> 11</td>\n",
+        "      <td>...</td>\n",
+        "      <td>  9.58</td>\n",
+        "      <td> 31653</td>\n",
+        "      <td>  NaN</td>\n",
+        "      <td>   NaN</td>\n",
+        "      <td> 10.2</td>\n",
+        "      <td> 24742</td>\n",
+        "      <td>  72.1</td>\n",
+        "      <td>  5394</td>\n",
+        "      <td> 28.6</td>\n",
+        "      <td> 15560</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>2</th>\n",
@@ -225,11 +276,17 @@
         "      <td>  326.2</td>\n",
         "      <td>  529</td>\n",
         "      <td>  354.5</td>\n",
-        "      <td> 412</td>\n",
-        "      <td> 219.4</td>\n",
-        "      <td> 531</td>\n",
-        "      <td>  945.9</td>\n",
-        "      <td> 18</td>\n",
+        "      <td>...</td>\n",
+        "      <td> 53.70</td>\n",
+        "      <td>  5136</td>\n",
+        "      <td> 32.6</td>\n",
+        "      <td> 13136</td>\n",
+        "      <td> 47.1</td>\n",
+        "      <td>  6284</td>\n",
+        "      <td>  40.6</td>\n",
+        "      <td> 16077</td>\n",
+        "      <td> 45.2</td>\n",
+        "      <td>  7427</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>3</th>\n",
@@ -243,11 +300,17 @@
         "      <td> 1081.3</td>\n",
         "      <td>   11</td>\n",
         "      <td>  985.8</td>\n",
-        "      <td>  14</td>\n",
-        "      <td> 704.7</td>\n",
-        "      <td>  13</td>\n",
-        "      <td> 1001.5</td>\n",
-        "      <td> 15</td>\n",
+        "      <td>...</td>\n",
+        "      <td>   NaN</td>\n",
+        "      <td>   NaN</td>\n",
+        "      <td> 47.6</td>\n",
+        "      <td>  9476</td>\n",
+        "      <td> 86.7</td>\n",
+        "      <td>  1541</td>\n",
+        "      <td>  81.8</td>\n",
+        "      <td>  3964</td>\n",
+        "      <td> 88.3</td>\n",
+        "      <td>  1701</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>4</th>\n",
@@ -261,19 +324,26 @@
         "      <td> 1009.5</td>\n",
         "      <td>   16</td>\n",
         "      <td>  936.1</td>\n",
-        "      <td>  20</td>\n",
-        "      <td> 722.8</td>\n",
-        "      <td>  12</td>\n",
-        "      <td> 1007.1</td>\n",
-        "      <td> 14</td>\n",
+        "      <td>...</td>\n",
+        "      <td> 69.00</td>\n",
+        "      <td>  3444</td>\n",
+        "      <td> 65.2</td>\n",
+        "      <td>  6470</td>\n",
+        "      <td> 39.6</td>\n",
+        "      <td>  8351</td>\n",
+        "      <td> 108.7</td>\n",
+        "      <td>  1777</td>\n",
+        "      <td> 45.9</td>\n",
+        "      <td>  7189</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
+        "<p>5 rows \u00d7 27 columns</p>\n",
         "</div>"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 53,
+       "prompt_number": 9,
        "text": [
         "   id chr_name      start        end  chromosome_id  tag_count_10um_pcc  \\\n",
         "0   5    chr11   22838517   22859099             13              1045.5   \n",
@@ -289,23 +359,25 @@
         "3           10                1081.3             11                985.8   \n",
         "4           11                1009.5             16                936.1   \n",
         "\n",
-        "   id_10um_k99a  tag_count_100um_k99a  id_100um_k99a  tag_count_0_1um_pcc  \\\n",
-        "0             6                 830.2              8               1213.3   \n",
-        "1            33                 342.7            157               1043.5   \n",
-        "2           412                 219.4            531                945.9   \n",
-        "3            14                 704.7             13               1001.5   \n",
-        "4            20                 722.8             12               1007.1   \n",
+        "    ...     batf_tag_count  batf_id  junb_tag_count  junb_id  cjun_tag_count  \\\n",
+        "0   ...              53.70     5125            19.2    17391             NaN   \n",
+        "1   ...               9.58    31653             NaN      NaN            10.2   \n",
+        "2   ...              53.70     5136            32.6    13136            47.1   \n",
+        "3   ...                NaN      NaN            47.6     9476            86.7   \n",
+        "4   ...              69.00     3444            65.2     6470            39.6   \n",
         "\n",
-        "   id_0_1um_pcc  \n",
-        "0             5  \n",
-        "1            11  \n",
-        "2            18  \n",
-        "3            15  \n",
-        "4            14  "
+        "   cjun_id  jund_tag_count  jund_id  irf4_tag_count  irf4_id  \n",
+        "0      NaN            35.0    20005            24.2    19367  \n",
+        "1    24742            72.1     5394            28.6    15560  \n",
+        "2     6284            40.6    16077            45.2     7427  \n",
+        "3     1541            81.8     3964            88.3     1701  \n",
+        "4     8351           108.7     1777            45.9     7189  \n",
+        "\n",
+        "[5 rows x 27 columns]"
        ]
       }
      ],
-     "prompt_number": 53
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -355,7 +427,7 @@
        "stream": "stdout",
        "text": [
         "19472\n",
-        "8924\n",
+        "8932\n",
         "54\n",
         "20586"
        ]
@@ -365,7 +437,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "6701\n",
+        "6708\n",
         "30\n",
         "19871"
        ]
@@ -375,7 +447,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "4488\n",
+        "4489\n",
         "14\n",
         "21207"
        ]
@@ -385,10 +457,9 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "8794\n",
+        "8805\n",
         "5\n",
-        "21078\n",
-        "6546"
+        "21078"
        ]
       },
       {
@@ -396,8 +467,9 @@
        "stream": "stdout",
        "text": [
         "\n",
+        "6552\n",
         "0\n",
-        "35556\n",
+        "35589\n",
         "13381"
        ]
       },
@@ -408,7 +480,14 @@
         "\n",
         "4400\n",
         "29\n",
-        "13690\n",
+        "13690"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
         "4003\n",
         "19\n",
         "12977"
@@ -421,7 +500,14 @@
         "\n",
         "267\n",
         "3\n",
-        "14009\n",
+        "14009"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
         "4315\n",
         "4\n",
         "13637"
@@ -438,7 +524,7 @@
        ]
       }
      ],
-     "prompt_number": 56
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
