Comparing no peptide replicates

--- a/andtcr/offstate/get_data_from_db_me2_and_no_petide_reps.ipynb
+++ b/andtcr/offstate/get_data_from_db_me2_and_no_petide_reps.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4e0526f9ab66f59b92b6b9a4f496933a2eadd7c4a1888ad1c19d7aea6d770a0d"
+  "signature": "sha256:3dec3de1ef6da12f36dd5179c83f0920b8a18ec145c7046729b737cf9676c84b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -18,7 +18,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 1,
+       "text": [
+        "'\\nGet data for No-Peptide replicates for scatterplot.\\n'"
+       ]
+      }
+     ],
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -30,7 +40,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -58,7 +68,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -71,19 +81,19 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "ab = 'h3k4me2'\n",
-      "dates = ['13-11-20', '13-11-25', '14-06-11']"
+      "dates = ['13_11_20', '13_11_25', '14_06_11']"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -92,7 +102,7 @@
       "sql = '''select distinct on (p1.id) \n",
       "p1.id, chr.\"name\" as chr_name, p1.start, p1.\"end\",\n",
       "p1.chromosome_id, \n",
-      "p1.tag_count as tag_count_1,\n",
+      "p1.tag_count as tag_count_{date},\n",
       "p1.id as id_{date},\n",
       "p2.tag_count as tag_count_{other_1},\n",
       "p2.id as id_{other_1},\n",
@@ -120,19 +130,19 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "others_labels = ['other_1', 'other_2']\n",
-      "for i, current in enumerate(peptides):\n",
-      "    others = peptides[:i] + peptides[i+1:]\n",
+      "for i, current in enumerate(dates):\n",
+      "    others = dates[:i] + dates[i+1:]\n",
       "    others_d = OrderedDict(zip(others_labels, others))\n",
       "    \n",
-      "    nongene_sql = sql.format(ab=ab, peptide=current, genic='', **others_d)\n",
-      "    gene_sql = sql.format(ab=ab, peptide=current, genic='NOT', **others_d)\n",
+      "    nongene_sql = sql.format(ab=ab, date=current, genic='', **others_d)\n",
+      "    gene_sql = sql.format(ab=ab, date=current, genic='NOT', **others_d)\n",
       "    \n",
       "    data = dataframe_from_query(nongene_sql, engine)\n",
       "    data.to_csv('data/enhancers_me2_and_no_peptide_{}.txt'.format(current), \n",
@@ -144,7 +154,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -167,12 +177,12 @@
         "      <th>start</th>\n",
         "      <th>end</th>\n",
         "      <th>chromosome_id</th>\n",
-        "      <th>tag_count_1um_pcc</th>\n",
-        "      <th>id_1um_pcc</th>\n",
-        "      <th>tag_count_no_peptide</th>\n",
-        "      <th>id_no_peptide</th>\n",
-        "      <th>tag_count_1um_k99a</th>\n",
-        "      <th>id_1um_k99a</th>\n",
+        "      <th>tag_count_14_06_11</th>\n",
+        "      <th>id_14_06_11</th>\n",
+        "      <th>tag_count_13_11_20</th>\n",
+        "      <th>id_13_11_20</th>\n",
+        "      <th>tag_count_13_11_25</th>\n",
+        "      <th>id_13_11_25</th>\n",
         "    </tr>\n",
         "  </thead>\n",
         "  <tbody>\n",
@@ -180,71 +190,71 @@
         "      <th>0</th>\n",
         "      <td> 2</td>\n",
         "      <td>  chr9</td>\n",
-        "      <td>  32692704</td>\n",
-        "      <td>  32752634</td>\n",
+        "      <td>  32692621</td>\n",
+        "      <td>  32734051</td>\n",
         "      <td> 12</td>\n",
-        "      <td> 2532.6</td>\n",
+        "      <td> 3598.7</td>\n",
         "      <td> 2</td>\n",
-        "      <td> 2472.8</td>\n",
-        "      <td>  2</td>\n",
-        "      <td> 2246.5</td>\n",
-        "      <td> 2</td>\n",
+        "      <td> 1552.6</td>\n",
+        "      <td>   2</td>\n",
+        "      <td> 913.0</td>\n",
+        "      <td>    2</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>1</th>\n",
         "      <td> 3</td>\n",
         "      <td> chr11</td>\n",
-        "      <td>  11687045</td>\n",
-        "      <td>  11743539</td>\n",
+        "      <td>  11685952</td>\n",
+        "      <td>  11742900</td>\n",
         "      <td> 13</td>\n",
-        "      <td> 2036.0</td>\n",
+        "      <td> 3593.9</td>\n",
         "      <td> 3</td>\n",
-        "      <td> 2153.9</td>\n",
-        "      <td>  3</td>\n",
-        "      <td> 1962.2</td>\n",
-        "      <td> 3</td>\n",
+        "      <td>  629.1</td>\n",
+        "      <td>  59</td>\n",
+        "      <td> 584.8</td>\n",
+        "      <td>   17</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>2</th>\n",
         "      <td> 4</td>\n",
         "      <td>  chr1</td>\n",
-        "      <td> 138126403</td>\n",
-        "      <td> 138180881</td>\n",
+        "      <td> 138129824</td>\n",
+        "      <td> 138176314</td>\n",
         "      <td>  1</td>\n",
-        "      <td> 1874.8</td>\n",
+        "      <td> 3114.9</td>\n",
         "      <td> 4</td>\n",
-        "      <td> 2058.8</td>\n",
-        "      <td>  4</td>\n",
-        "      <td> 1868.7</td>\n",
-        "      <td> 4</td>\n",
+        "      <td>  476.4</td>\n",
+        "      <td> 146</td>\n",
+        "      <td> 273.1</td>\n",
+        "      <td>  324</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>3</th>\n",
-        "      <td> 6</td>\n",
-        "      <td> chr11</td>\n",
-        "      <td> 118205807</td>\n",
-        "      <td> 118249655</td>\n",
-        "      <td> 13</td>\n",
-        "      <td> 1786.0</td>\n",
-        "      <td> 6</td>\n",
-        "      <td> 1913.8</td>\n",
-        "      <td>  5</td>\n",
-        "      <td> 1847.1</td>\n",
         "      <td> 5</td>\n",
+        "      <td>  chr3</td>\n",
+        "      <td>  89378218</td>\n",
+        "      <td>  89397222</td>\n",
+        "      <td>  4</td>\n",
+        "      <td> 2939.3</td>\n",
+        "      <td> 5</td>\n",
+        "      <td>  863.9</td>\n",
+        "      <td>  15</td>\n",
+        "      <td> 647.0</td>\n",
+        "      <td>   12</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>4</th>\n",
-        "      <td> 7</td>\n",
-        "      <td> chr11</td>\n",
-        "      <td> 117316781</td>\n",
-        "      <td> 117351761</td>\n",
-        "      <td> 13</td>\n",
-        "      <td> 1628.7</td>\n",
-        "      <td> 7</td>\n",
-        "      <td> 1439.3</td>\n",
-        "      <td> 13</td>\n",
-        "      <td> 1641.9</td>\n",
-        "      <td> 7</td>\n",
+        "      <td> 6</td>\n",
+        "      <td>  chr5</td>\n",
+        "      <td>  65855826</td>\n",
+        "      <td>  65890258</td>\n",
+        "      <td>  6</td>\n",
+        "      <td> 2925.9</td>\n",
+        "      <td> 6</td>\n",
+        "      <td>  875.4</td>\n",
+        "      <td>  14</td>\n",
+        "      <td>  78.8</td>\n",
+        "      <td> 8065</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
@@ -252,32 +262,32 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 7,
+       "prompt_number": 18,
        "text": [
-        "   id chr_name      start        end  chromosome_id  tag_count_1um_pcc  \\\n",
-        "0   2     chr9   32692704   32752634             12             2532.6   \n",
-        "1   3    chr11   11687045   11743539             13             2036.0   \n",
-        "2   4     chr1  138126403  138180881              1             1874.8   \n",
-        "3   6    chr11  118205807  118249655             13             1786.0   \n",
-        "4   7    chr11  117316781  117351761             13             1628.7   \n",
+        "   id chr_name      start        end  chromosome_id  tag_count_14_06_11  \\\n",
+        "0   2     chr9   32692621   32734051             12              3598.7   \n",
+        "1   3    chr11   11685952   11742900             13              3593.9   \n",
+        "2   4     chr1  138129824  138176314              1              3114.9   \n",
+        "3   5     chr3   89378218   89397222              4              2939.3   \n",
+        "4   6     chr5   65855826   65890258              6              2925.9   \n",
         "\n",
-        "   id_1um_pcc  tag_count_no_peptide  id_no_peptide  tag_count_1um_k99a  \\\n",
-        "0           2                2472.8              2              2246.5   \n",
-        "1           3                2153.9              3              1962.2   \n",
-        "2           4                2058.8              4              1868.7   \n",
-        "3           6                1913.8              5              1847.1   \n",
-        "4           7                1439.3             13              1641.9   \n",
+        "   id_14_06_11  tag_count_13_11_20  id_13_11_20  tag_count_13_11_25  \\\n",
+        "0            2              1552.6            2               913.0   \n",
+        "1            3               629.1           59               584.8   \n",
+        "2            4               476.4          146               273.1   \n",
+        "3            5               863.9           15               647.0   \n",
+        "4            6               875.4           14                78.8   \n",
         "\n",
-        "   id_1um_k99a  \n",
+        "   id_13_11_25  \n",
         "0            2  \n",
-        "1            3  \n",
-        "2            4  \n",
-        "3            5  \n",
-        "4            7  "
+        "1           17  \n",
+        "2          324  \n",
+        "3           12  \n",
+        "4         8065  "
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -293,23 +303,23 @@
       "\n",
       "for peak_type in ('enhancers','promoters'):\n",
       "    keep_dfs = []\n",
-      "    for i, pep in enumerate(peptides):\n",
-      "        data = pd.io.parsers.read_csv('data/{}_me2_and_no_peptide_{}.txt'.format(peak_type, pep), \n",
+      "    for i, date in enumerate(dates):\n",
+      "        data = pd.io.parsers.read_csv('data/{}_me2_and_no_peptide_{}.txt'.format(peak_type, date), \n",
       "                                    sep='\\t', header=0)\n",
       "        data = data.fillna(0)\n",
       "        print(len(data))\n",
-      "        key = 'tag_count_' + pep\n",
+      "        key = 'tag_count_' + date\n",
       "\n",
-      "        peptides_before = ['tag_count_' + o for o in peptides[:i]]\n",
-      "        peptides_after = ['tag_count_' + o for o in peptides[i+1:]]\n",
-      "        others = peptides_before + peptides_after\n",
+      "        before = ['tag_count_' + o for o in dates[:i]]\n",
+      "        after = ['tag_count_' + o for o in dates[i+1:]]\n",
+      "        others = before + after\n",
       "        data_mask = data[key] > data[others].max(axis=1)\n",
       "        print(sum(data_mask))\n",
       "\n",
       "        # If there is a tie, only take this row if it is the first instance of the tie.\n",
       "        tie_mask = data[key] == data[others].max(axis=1)\n",
       "        # Is this the first instance? Fill nulls for the case of the first column.\n",
-      "        first_mask = data[key] > data[peptides_before].max(axis=1).fillna(0)\n",
+      "        first_mask = data[key] > data[before].max(axis=1).fillna(0)\n",
       "        print(sum(tie_mask & first_mask))\n",
       "        keep_dfs.append(data[data_mask | (tie_mask & first_mask)])\n",
       "\n",
@@ -326,13 +336,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "21413\n",
-        "13147\n",
-        "48\n",
-        "13611\n",
-        "2266\n",
-        "5\n",
-        "14947"
+        "39147\n",
+        "15705\n",
+        "49\n",
+        "31190\n",
+        "8070\n",
+        "15"
        ]
       },
       {
@@ -340,10 +349,18 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "5850\n",
+        "41974"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "34564\n",
         "0\n",
-        "21316\n",
-        "12066"
+        "58403\n",
+        "12977"
        ]
       },
       {
@@ -351,26 +368,26 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "7254\n",
-        "27\n",
-        "11068\n",
-        "1135\n",
-        "3\n",
-        "11267\n",
-        "3527"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
+        "751\n",
+        "1\n",
+        "12224\n",
+        "195\n",
         "0\n",
-        "11946\n"
+        "13875"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "13044\n",
+        "0\n",
+        "13991\n"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
