--- a/andtcr/flow/activation_markers_2014_11_24.ipynb
+++ b/andtcr/flow/activation_markers_2014_11_24.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0902e56048e5205c626b612158332f3a7166bdfb0e53ae5ac319af8a7131f048"
+  "signature": "sha256:0fc4456baed2611017820941f16ce10b7f7ef4b2b88400acb7f4425a6b7d6e90"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -273,7 +273,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 37
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -286,7 +286,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 38
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -308,7 +308,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 39
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -355,13 +355,61 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "from scipy.stats import ttest_ind\n",
+      "\n",
+      "t, p = ttest_ind(data[data['TUBE NAME'] == 'PCC-100uM'][col_name],\n",
+      "              data[data['TUBE NAME'] == 'PCC-0_02uM'][col_name])\n",
+      "print(t, p)\n",
+      "\n",
+      "t, p = ttest_ind(data[data['TUBE NAME'] == 'MCC-100uM'][col_name],\n",
+      "              data[data['TUBE NAME'] == 'MCC-10uM'][col_name])\n",
+      "print(t, p)\n",
+      "\n",
+      "t, p = ttest_ind(data[data['TUBE NAME'] == 'MCC-100uM'][col_name],\n",
+      "              data[data['TUBE NAME'] == 'MCC-0_04uM'][col_name])\n",
+      "print(t, p)\n",
+      "\n",
+      "t, p = ttest_ind(data[data['TUBE NAME'] == 'K99E-100uM'][col_name],\n",
+      "              data[data['TUBE NAME'] == 'K99E-10uM'][col_name])\n",
+      "print(t, p)\n",
+      "\n",
+      "t, p = ttest_ind(data[data['TUBE NAME'] == 'K99E-100uM'][col_name],\n",
+      "              data[data['TUBE NAME'] == 'K99E-1uM'][col_name])\n",
+      "print(t, p)\n",
+      "\n",
+      "t, p = ttest_ind(data[data['TUBE NAME'] == 'K99A-100uM'][col_name],\n",
+      "              data[data['TUBE NAME'] == 'K99A-1uM'][col_name])\n",
+      "print(t, p)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "15.0784593252 0.000112744428544\n",
+        "7.08279886676 0.000397281000855\n",
+        "15.6407235563 9.75843863872e-05\n",
+        "7.35852649356 0.000322550664478\n",
+        "18.6465343662 1.53534417297e-06\n",
+        "3.24860100873 0.0174970147091\n"
+       ]
+      }
+     ],
+     "prompt_number": 17
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "ab = 'CD25'\n",
       "col_name = 'Lymphocytes/Single Cells/Single Cells/CD4+/{}+ | Geometric Mean (Comp-PE-A)'.format(ab)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 41
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -374,7 +422,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 42
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -416,6 +464,54 @@
       }
      ],
      "prompt_number": 43
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from scipy.stats import ttest_ind\n",
+      "\n",
+      "t, p = ttest_ind(data[data['TUBE NAME'] == 'PCC-100uM'][col_name],\n",
+      "              data[data['TUBE NAME'] == 'PCC-0_02uM'][col_name])\n",
+      "print(t, p)\n",
+      "\n",
+      "t, p = ttest_ind(data[data['TUBE NAME'] == 'MCC-100uM'][col_name],\n",
+      "              data[data['TUBE NAME'] == 'MCC-10uM'][col_name])\n",
+      "print(t, p)\n",
+      "\n",
+      "t, p = ttest_ind(data[data['TUBE NAME'] == 'MCC-100uM'][col_name],\n",
+      "              data[data['TUBE NAME'] == 'MCC-0_04uM'][col_name])\n",
+      "print(t, p)\n",
+      "\n",
+      "t, p = ttest_ind(data[data['TUBE NAME'] == 'K99E-100uM'][col_name],\n",
+      "              data[data['TUBE NAME'] == 'K99E-10uM'][col_name])\n",
+      "print(t, p)\n",
+      "\n",
+      "t, p = ttest_ind(data[data['TUBE NAME'] == 'K99E-100uM'][col_name],\n",
+      "              data[data['TUBE NAME'] == 'K99E-1uM'][col_name])\n",
+      "print(t, p)\n",
+      "\n",
+      "t, p = ttest_ind(data[data['TUBE NAME'] == 'K99A-100uM'][col_name],\n",
+      "              data[data['TUBE NAME'] == 'K99A-1uM'][col_name])\n",
+      "print(t, p)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "3.96750130781 0.016573279768\n",
+        "4.40191282127 0.00455895166475\n",
+        "6.17262547469 0.00349833262303\n",
+        "5.09250586495 0.00223782576151\n",
+        "6.464727823 0.000649841697194\n",
+        "1.3618370877 0.22216115815\n"
+       ]
+      }
+     ],
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
