--- a/andtcr/flow/pERK_MEKi_2015_02_09.ipynb
+++ b/andtcr/flow/pERK_MEKi_2015_02_09.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7bdc33db37706c5c94b0df31f62adaa2ab533c5045e97ca81e410eed60510119"
+  "signature": "sha256:1a55e5300573afdb73c51775636b4d054f6c0e209f9ab3404952ef7532ad4e1e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -22,13 +22,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 1,
+       "prompt_number": 2,
        "text": [
         "'\\nPlot output of FlowJo Geometric MFI analysis as a pretty bargraph.\\n'"
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -40,7 +40,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -59,7 +59,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -125,7 +125,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 5,
        "text": [
         "                       TUBE NAME  \\\n",
         "366140.fcs  No-Peptide-MEKi-10uM   \n",
@@ -150,7 +150,7 @@
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -180,7 +180,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -192,7 +192,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 16
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -205,7 +205,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 17
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -221,7 +221,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 18
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -328,6 +328,57 @@
       }
      ],
      "prompt_number": 20
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from scipy.stats import ttest_ind\n",
+      "\n",
+      "t, p = ttest_ind(data[data['TUBE NAME'] == 'No-Peptide-Notx'][col_name],\n",
+      "              data[data['TUBE NAME'] == 'PCC-10uM-Notx'][col_name])\n",
+      "print(t, p)\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "-3.65508894163 0.0673752560646\n"
+       ]
+      }
+     ],
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "pairs = [(x, x+5) for x in range(0, len(col_order), 6)]\n",
+      "\n",
+      "for x, y in pairs:\n",
+      "    t, p = ttest_ind(data[data['TUBE NAME'] == col_order[x]][col_name], \n",
+      "                     data[data['TUBE NAME'] == col_order[y]][col_name])\n",
+      "    print(col_order[x], 'v', col_order[y], '\\t', p)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "No-Peptide-Notx v No-Peptide-MEKi-10uM \t 0.249576261113\n",
+        "K99A-10uM-Notx v K99A-10uM-MEKi-10uM \t 0.0398915629293\n",
+        "K99A-100uM-Notx v K99A-100uM-MEKi-10uM \t 0.0121060976391\n",
+        "PCC-0_1uM-Notx v PCC-0_1uM-MEKi-10uM \t 0.0303572173152\n",
+        "PCC-10uM-Notx v PCC-10uM-MEKi-10uM \t 0.0516626615154\n"
+       ]
+      }
+     ],
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
