--- a/andtcr/flow/activation_markers_stain_2_2015_05_19.ipynb
+++ b/andtcr/flow/activation_markers_stain_2_2015_05_19.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9ebb7e3c2d8c0299d6892d445ed22f8a6cee4059ccf92aad2c96b20b1ce26f8b"
+  "signature": "sha256:35efcae5ab737e1db323eca0337fbb81b9390c42c1efd4df632c051f262baf7c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -408,7 +408,10 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "ab = 'IL21R'\n",
+      "col_name = 'Lymphocytes/CD4+/{}+ | Geometric Mean (Comp-APC-A)'.format(ab)"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
